--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 
   <div id="result-message"></div>
 
-  <button onclick="resetGame()">Reset Game</button>
+  <button id="reset-button">Reset Game</button>
 
   <script src="script.js"></script>
-  
 </body>
 </html>
